<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wake-e</string>
    <string name="mail">Mail</string>
    <string name="agenda">Agenda</string>
    <string name="meteo">Météo</string>
    <string name="heure_def">00:00</string>
    <string name="traffic">Traffic</string>
    <string name="reveil_estime">Réveil estimé</string>
    <string name="action_settings">Settings</string>
    <string name="from_def">Emilien Notarianni</string>
    <string name="subjet_def">[API12] Default</string>
    <string name="body_def">        Hac ex causa conlaticia stipe Valerius humatur ille Publicola et subsidiis amicorum mariti inops cum liberis uxor alitur Reguli et dotatur ex aerario filia Scipionis, cum nobilitas florem adultae virginis diuturnum absentia pauperis erubesceret patris.</string>
    <string name="heure_agenda_def">8h00 à 9h00</string>
    <string name="subjet_agenda_def">API12 - Réunion</string>
    <string name="lieu_agenda_def">        Centre d\'innovation</string>
    <string name="snooze">SNOOZE</string>
    <string name="title_activity_page_reveil_fragment">PageReveilFragment</string>
    <string name="title_activity_ss">MainActivity</string>
    <string name="params">Paramètres</string>
    <string name="synchro">COMPTES</string>
    <string name="trajet">LOCALITES</string>
    <string name="slides">SLIDES</string>
    <string name="destination">Destination</string>
    <string name="home">Domicile</string>
    <string name="temperature_def">0°C</string>
    <string name="wind_def">0km/h</string>
    <string name="humidity_def">0%</string>
    <string name="city_def">Nice</string>
    <string name="title_activity_conf_reveil">ConfReveilActivity</string>
    <string name="sound">SONNERIES</string>
    <string name="add_compte">Ajouter un compte</string>
    <string name="add_localisation">Ajouter une localisation</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="preparation">Préparation</string>
    <string name="heureArrivee">Heure d arrivée</string>
    <string name="lieuArrivee">Destination</string>
    <string name="depart">Départ</string>
    <string name="open_bell">Chercher une sonnerie</string>
    <string name="save">Sauvegarder</string>
    <string name="cancel">Annuler</string>
    <string name="locationName">Nom</string>
    <string name="locationAddress">Adresse</string>
    <string name="create">Créer</string>
    <string name="title_activity_snooze">SnoozeActivity</string>
    <string name="title_activity_tuto">TutoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tuto2">Tuto2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
