<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/w_parameter"
        android:gravity="center"
        android:text="@string/params"
        android:textColor="@color/orange"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/synchro"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <View
        android:id="@+id/view1"
        android:layout_width="290dp"
        android:layout_height="1dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignRight="@+id/view1"
        android:layout_below="@+id/view1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/agenda"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/calendar"
            android:gravity="center"
            android:text="@string/agenda"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/mail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mail"
            android:gravity="center"
            android:text="@string/mail"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/trajet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view2"
        android:layout_centerHorizontal="true"
        android:text="@string/trajet"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <View
        android:id="@+id/view2"
        android:layout_width="290dp"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="31dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignRight="@+id/view1"
        android:layout_below="@+id/view2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/home"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/home"
            android:gravity="center"
            android:text="@string/home"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/destinations"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/target"
            android:gravity="center"
            android:text="@string/destination"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:text="@string/slides"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <View
        android:id="@+id/view3"
        android:layout_width="290dp"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="26dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/slides"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_below="@id/view3"
        android:drawableLeft="@drawable/slide"
        android:gravity="center"
        android:text="@string/slides"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

</RelativeLayout>