<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="com.wakee.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:gravity="top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_fonce_trans"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/agendaHeure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/heure_agenda_def"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/agendaSubjet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/subjet_agenda_def"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/agendaLieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/lieu_agenda_def"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>