<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_fonce" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="Réveil"
	            android:textColor="@color/background"
	            android:textSize="50sp" />
		   
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="40dp"
	            android:layout_marginTop="42dp" >

	            <ImageView
	                android:id="@+id/imageView1"
	                android:layout_width="wrap_content"
	                android:layout_height="300dp"
	                android:paddingTop="10dp"
	                android:src="@drawable/trajet" />

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="370dp"
	                android:layout_gravity="center"
	                android:layout_marginLeft="40dp"
	                android:layout_marginRight="40dp"
	                android:orientation="vertical" >

	                <TextView
	                    android:id="@+id/TextView03"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:background="@color/background"
	                    android:gravity="center"
	                    android:paddingBottom="10dp"
	                    android:paddingTop="10dp"
	                    android:text="@string/depart"
	                    android:textColor="@color/white"
	                    android:textSize="14sp" />

	                <TextView
	                    android:id="@+id/TextView02"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="78dp"
	                    android:background="@color/background"
	                    android:gravity="center"
	                    android:paddingBottom="10dp"
	                    android:paddingTop="10dp"
	                    android:text="@string/preparation"
	                    android:textColor="@color/white"
	                    android:textSize="14sp" />

	                <LinearLayout
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="45dp"
	                    android:gravity="bottom|center_horizontal" >

	                    <ImageView
	                        android:id="@+id/imageView2"
	                        android:layout_width="25dp"
	                        android:layout_height="38dp"
	                        android:layout_marginRight="5dp"
	                        android:src="@drawable/utrain" />

	                    <ImageView
	                        android:id="@+id/imageView3"
	                        android:layout_width="36dp"
	                        android:layout_height="36dp"
	                        android:layout_marginLeft="20dp"
	                        android:layout_marginRight="20dp"
	                        android:src="@drawable/uvelo" />

	                    <ImageView
	                        android:id="@+id/imageView4"
	                        android:layout_width="41dp"
	                        android:layout_height="41dp"
	                        android:layout_marginLeft="5dp"
	                        android:src="@drawable/uvoiture" />

	                </LinearLayout>

	                <TextView
	                    android:id="@+id/TextView01"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="35dp"
	                    android:background="@color/background"
	                    android:gravity="center"
	                    android:paddingBottom="10dp"
	                    android:paddingTop="10dp"
	                    android:text="@string/heureArrivee"
	                    android:textColor="@color/white"
	                    android:textSize="14sp" />

	                <TextView
	                    android:id="@+id/textView2"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="5dp"
	                    android:background="@color/background"
	                    android:gravity="center"
	                    android:paddingBottom="10dp"
	                    android:paddingTop="10dp"
	                    android:text="@string/lieuArrivee"
	                    android:textColor="@color/white"
	                    android:textSize="14sp" />
	            </LinearLayout>
	        </LinearLayout>

	                <LinearLayout
	                    android:layout_width="match_parent"
	                    android:layout_height="match_parent"
	                    android:gravity="center_horizontal|bottom">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="124dp"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:background="@color/grey"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="3dp"
                android:paddingTop="5dp"
                android:text="@string/cancel"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/save"
                android:layout_width="124dp"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:background="@color/grey"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="3dp"
                android:paddingTop="5dp"
                android:text="@string/save"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>